rename Log to BzLog to avoid potential conflict